@@ -1,8 +1,7 @@
 sdesc: "A program for printing sheet music"
 category: Publishing
-requires: bash coreutils cygwin findutils ghostscript glib2-runtime libfontconfig1 libfreetype2 libguile12 libiconv2 libintl3 pango-runtime python _update-info-dir
-#suggests: emacs gsview lilypond-doc rxvt tetex-x11 xorg-x11-base libkpathsea4
+requires: bash coreutils cygwin findutils ghostscript glib2-runtime libfontconfig1 libfreetype26 libguile12 libiconv2 libintl3 pango-runtime python _update-info-dir
+#suggests: emacs gsview libkpathsea4 lilypond-doc tetex-bin tetex-tiny rxvt xorg-x11-base
 ldesc: "A program for printing sheet music.
-LilyPond prints beautiful sheet music.  It produces music notation
-from a description file. It excels at typesetting classical music, but
-you can also print pop-songs.  LilyPond is part of the GNU Project."
+LilyPond lets you create music notation.  It produces
+beautiful sheet music from a high-level description file."
