@@ -25,3 +25,5 @@ regtool add '/root/LilyPond/shell/generate'
 regtool set '/root/LilyPond/shell/generate/' '&Generate PDF ...'
 regtool add '/root/LilyPond/shell/generate/command'
 regtool set '/root/LilyPond/shell/generate/command/' $ROOT'\bin\bash.exe --login -c '"'"'/usr/bin/lily-wins "%1"'"'"
+
+(cd /usr/share/info/lilypond && ln -sf ../../doc/lilypond/Documentation/user/out-www/*png .)
