@@ -1,3 +1,8 @@
+2005-10-23  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/lily.scm: Remove horrendous running-from-gui? kludge.
+	(lilypond-main): Redirect to gui-main if 'gui is set.
+
 2005-10-23  Erik Sandberg  <mandolaerik@gmail.com>
 
 	* scripts/lilypond-book.py: Backport bugfix by Mats Bengtsson.
